@@ -1,3 +1,7 @@
+2017-06-17  Sam Varshavchik  <mrsam@courier-mta.com>
+
+	* libs/maildir/maildirquota.c (docheckquota): Skip DT_LNK.
+
 5.8.4
 
 2016-11-27  Sam Varshavchik  <mrsam@courier-mta.com>
